add babel configuration

--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
         "packages/*",
         "apps/*",
         "services/*"
-    ]
+    ],
+    "dependencies": {
+        "@babel/core": "^7.16.7",
+        "@babel/plugin-transform-runtime": "^7.16.8",
+        "@babel/preset-env": "^7.16.8",
+        "@babel/preset-react": "^7.16.7"
+    }
 }
