--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   },
   "homepage": "https://github.com/redditech/reddisetgo#readme",
   "workspaces": [
-    "packages/hardhat"
-  ]
+    "packages/*",
+    "apps/*",
+    "frontends/*",
+    "services/*"
+  ],
+  "scripts": {
+    "test": "npm run test --workspaces --if-present"
+  }
 }
