add hardhat sample app integrated as workspace

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "services/*"
   ],
   "scripts": {
+    "build": "npm run build --workspaces --if-present",
     "test": "npm run test --workspaces --if-present"
   }
 }
