--- a/apps/hh-sample/package.json
+++ b/apps/hh-sample/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "hardhat-project",
+  "name": "reddisetgo-hh-sample",
+  "version": "0.0.1",
+  "description": "A hardhat sample app for a monorepo for smart contract DApp development",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
