--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "services/*"
   ],
   "scripts": {
+    "initialize": "npm install --workspaces --if present && npm run initialize --workspaces --if-present",
     "build": "npm run build --workspaces --if-present",
     "test": "npm run test --workspaces --if-present",
     "prepare": "husky install"
